Minor translation fixes

--- a/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/BottomEdgeInfoBar.xaml
@@ -222,7 +222,8 @@
             IsTextScaleFactorEnabled="False"
             FontWeight="Normal"
             Grid.Column="1">
-            <Run Text="Error"/>
+            <Run Text="Error"
+                 x:Uid="ErrorRun"/>
             <Run 
                 Text="12"
                 x:Name="ErrorRun"/>
