--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/CompactCharactersChunkViewerTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/CompactCharactersChunkViewerTemplate.xaml
@@ -41,6 +41,7 @@
         <TextBlock
             Style="{StaticResource FontIconTextBlockStyle}"
             Text="&#xE011;"
+            FontWeight="ExtraBold"
             FontSize="10"
             Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
             VerticalAlignment="Bottom"
