Minor bug fixes and improvements

--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/CompactCharactersChunkViewerTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/CompactCharactersChunkViewerTemplate.xaml
@@ -42,6 +42,7 @@
             Style="{StaticResource FontIconTextBlockStyle}"
             Text="&#xE011;"
             FontSize="10"
+            FontWeight="ExtraBold"
             Foreground="{ThemeResource SystemControlHighlightAccentBrush}"
             VerticalAlignment="Bottom"
             Visibility="{Binding ChunkSelected}"
