--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LoadingPopupControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LoadingPopupControl.xaml
@@ -4,17 +4,11 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:xaml="using:Microsoft.Graphics.Canvas.UI.Xaml"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid Background="Transparent">
-        <xaml:CanvasControl
-            Opacity="0"
-            IsHitTestVisible="False"
-            x:Name="Win2DCanvas"/>
-        <Border x:Name="EffectBorder"/>
+    <Grid x:Name="RootGrid">
         <ProgressRing
             VerticalAlignment="Center"
             HorizontalAlignment="Center"
