Fixed custom context menu opening offset

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -577,6 +577,7 @@
             LostFocus="EditBox_OnLostFocus"
             Paste="EditBox_OnPaste"
             TextSizeChanged="EditBox_OnTextSizeChanged"
+            ContextFlyout="{x:Null}"
             ContextMenuOpening="EditBox_OnContextMenuOpening"
             Margin="0"/>
     </Grid>
