--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/InterpreterSettingsSection.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/Settings/Sections/InterpreterSettingsSection.xaml
@@ -4,7 +4,6 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:inheritedControls="using:Brainf_ck_sharp_UWP.UserControls.InheritedControls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
@@ -15,9 +14,9 @@
         <TextBlock
             Text="Memory size"
             x:Uid="MemorySize"/>
-        <inheritedControls:AnimatedComboBox
+        <ComboBox
             Margin="0,8,0,0"
-            ItemContainerStyle="{StaticResource FluentComboBoxItemContainerStyle}"
+            BorderThickness="1"
             ItemsSource="{Binding ViewModel.MemorySizeOptions}"
             SelectedIndex="{Binding ViewModel.MemorySizeSelectedIndex, Mode=TwoWay}"
             MinWidth="180"/>
